<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     ** Copyright 2008, The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Audio amplification -->
    <string name="volume_gain_label">Audio Amplification</string>
    <string name="volume_gain_summary">Control audio gain</string>
    <string name="volume_gain_title">Speaker and Headphone gain</string>
    <string name="microphone_gain_title">Microphone gain</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Dirac settings -->
    <string name="dirac_enable">Enable Dirac</string>
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Smart charging -->
    <string name="smart_charging_title">Smart Charging</string>
    <string name="smart_charging_summary">Set maximum charging level</string>
    <string name="smart_charging_switch_title">Enable Smart Charging</string>
    <string name="smart_charging_level_title">Stop trigger level</string>
    <string name="smart_charging_resume_level_title">Start trigger level</string>
    <string name="smart_charging_battery_temperature">Battery temperature</string>
    <string name="smart_charging_current_max">Current intensity</string>
    <string name="smart_charging_current_max_entry_default">Default</string>
    <string name="smart_charging_current_max_entry_2000">2000 mA</string>
    <string name="smart_charging_current_max_entry_1800">1800 mA</string>
    <string name="smart_charging_current_max_entry_1500">1500 mA</string>
    <string name="smart_charging_current_max_entry_1200">1200 mA</string>
    <string name="smart_charging_current_max_entry_1000">1000 mA</string>
    <string name="smart_charging_current_max_entry_700">700 mA</string>
    <string name="smart_charging_current_max_entry_500">500 mA</string>
    <string name="smart_charging_reset_stats_title">Reset battery stats</string>
    <string name="smart_charging_reset_stats_summary">Reset battery statistics after reaching user defined charging level</string>
    <string name="smart_charging_warning">Stop trigger level should be always greater than Start trigger level</string>
    <string name="smart_charging_footer">Smart Charging allows you to set maximum charging level to extend the lifespan of your battery. When enabled, battery stops charging at Stop trigger level and resumes charging at Start trigger level. Stop trigger level should be always greater than Start trigger level.</string>

    <!-- Misc -->
    <string name="not_now">Not now</string>
    <string name="next_update_time">Next update at %1$s</string>

    <!-- Pocket Judge -->
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
    <string name="pocket_judge_notif_title">Pocket mode is on</string>
    <string name="pocket_judge_notif_msg">Press and hold power button to unlock</string>
    <string name="pocket_judge_demo_title_cancel">To activate your phone:</string>
    <string name="pocket_judge_demo_tag_cancel">Do not cover the blue area of your phone, and clean any dirt or dust off.</string>
    <string name="pocket_judge_demo_tag_cancel2">Long press the power button to force quit pocket mode</string>
    <string name="pocket_judge_demo_tag_number1">1.\u0020</string>
    <string name="pocket_judge_demo_tag_number2">2.\u0020</string>

    <!-- UiBench -->
    <string name="uibench_title">UiBench</string>
    <string name="jitter_test_title">Jitter</string>
    <string name="jitter_test_summary">Calculate rendering jitter</string>

    <!-- RAM+ -->
    <string name="ramplus_qs_title">RAM+</string>
    <string name="ramplus_mode_moderate">Moderate</string>
    <string name="ramplus_mode_slight">Slight</string>
    <string name="ramplus_mode_extreme">Extreme</string>
</resources>
