<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2022 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="smart_charging"
        android:title="@string/smart_charging_switch_title" />

    <org.lineageos.settings.preferences.SeekBarPreference
        android:key="seek_bar_limit"
        android:title="@string/smart_charging_level_title"
        android:layout="@layout/preference_slider"
        app:units="%"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"/>

    <org.lineageos.settings.preferences.SeekBarPreference
        android:key="seek_bar_resume"
        android:title="@string/smart_charging_resume_level_title"
        android:layout="@layout/preference_slider"
        app:units="%"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"/>

    <org.lineageos.settings.preferences.SeekBarPreference
        android:key="seek_bar_temp"
        android:title="@string/smart_charging_battery_temperature"
        android:layout="@layout/preference_slider"
        app:units="°C"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"/>

    <SwitchPreference
        android:key="reset_stats"
        android:title="@string/smart_charging_reset_stats_title"
        android:summary="@string/smart_charging_reset_stats_summary" />

    <com.android.settingslib.widget.FooterPreference
        android:key="footer_preference"
        android:title="@string/smart_charging_footer"
        android:selectable="false" />
</PreferenceScreen>
